# WeatherReport

./: README.md  RestMethod.ps1  Weather Report by Ares Chen.py  WeatherReport.go  data.go  json.json  observe.go  pyrequests.py  pyrequests_demo.py  pyrequests_demo1.py  sql.sql
CShapeConsole/: CShapeConsole.csproj  CShapeConsole.sln  Program.cs
CShapeConsole/Properties/: AssemblyInfo.cs
ConsoleApp1/: ConsoleApp1.csproj  ConsoleApp1.sln  Program.cs
ConsoleApp1/MigrationBackup/b27b5d32/ConsoleApp1/: ConsoleApp1.csproj  NuGetUpgradeLog.html
ConsoleApp1/Properties/: AssemblyInfo.cs
WeatherReportWithCShapeConsole/: Program.cs
WpfApp1/: MainWindow.xaml  MainWindow.xaml.cs  WpfApp1.csproj  WpfApp1.sln
WpfApp1/Properties/: AssemblyInfo.cs
cargo_weather_report/: Cargo.toml  province.txt
cargo_weather_report/src/: main.rs
placename/: province.txt  上海市.txt  北京市.txt  天津市.txt  安徽省.txt  浙江省.txt  重庆市.txt
rocket_rawhtml/: Cargo.toml
rocket_rawhtml/src/: main.rs
rocket_weather_report/: Cargo.toml
rocket_weather_report/src/: main.rs
rocket_weather_report_1/: Cargo.toml
rocket_weather_report_1/src/: main.rs
rocket_weather_report_2/: Cargo.toml
rocket_weather_report_2/src/: main.rs
