[package]
name = "cargo_weather_report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }  
reqwest = { version = "0.11", features = ["json"] }  
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] } 
url="2.2"